--- a/src/index.css
+++ b/src/index.css
@@ -18,21 +18,26 @@ a {
   text-decoration: none;
 }
 
-a:hover {
-  color: #535bf2;
+.view-more {
+  color: blue;
+  cursor: pointer;
+  text-decoration: underline;
 }
+
+.view-more:hover {
+  color: darkblue;
+}
+
 
 body {
   margin: 0;
   padding: 0;
   width: 100%;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   background-color: white;
   color: black;
 }
+
 
 h1 {
   font-size: 2rem;
@@ -43,14 +48,22 @@ h1 {
 button {
   border-radius: 8px;
   border: none;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  background-color: #7B1919;
-  color: white;
   cursor: pointer;
   transition: background-color 0.25s;
 }
+
+.login-btn {
+  padding: 8px 15px;
+  font-size: 14px;
+  background-color: #7B1919;
+  color: white;
+}
+
+.login-btn:hover {
+  background-color: #d32f2f;
+}
+
+
 
 button:hover {
   background-color: #d32f2f;
